--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
     <!--contact-->
     <!--Footer-->
 
-    <script src="/components/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
