--- a/templates.html
+++ b/templates.html
@@ -54,5 +54,7 @@
             <p>Lorem ipsum dolor sit amet</p>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
