--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a id="home" href="index.html">Home</a>
             <a href="">About</a>
             <a href="">Service</a>
-            <a href="templates.html">Templates</a>
+            <a href="">Templates</a>
             <a href="">Contact Us</a>
         </nav>
         <button id="get-started"><a href="resume.html">Get Started</a></button>
@@ -37,7 +37,7 @@
                 <!-- <i class="fa fa-id-card" aria-hidden="true"></i>  -->
                 About</a>
             <a href="">Service</a>
-            <a href="templates.html">Templates</a>
+            <a href="">Templates</a>
             <a href="">Contact Us</a>
         </nav> 
         <button id="get-started2"><a href="resume.html">Get Started</a></button>
