--- a/resume.html
+++ b/resume.html
@@ -100,19 +100,19 @@
       <section class="personal-info">
         <h3>Personal Information</h3>
         <label for="full-name">Full Name: </label>
-        <input type="text" id="full-name" placeholder="John Doe" />
+        <input type="text" id="full-name" placeholder="John Doe" required/>
         <br />
         <label for="image">Upload Your Picture: </label>
-        <input type="file" id="image" accept="image/*">
+        <input type="file" id="image" accept="image/*" required/>
         <br>
         <label for="phone">Phone no#:</label>
-        <input type="number" id="phone" placeholder="+92-3403434347" />
+        <input type="number" id="phone" placeholder="+92-3403434347" required/>
         <br />
         <label for="email">Email: </label>
-        <input type="email" id="email" placeholder="john.doe@gmail.com" />
+        <input type="email" id="email" placeholder="john.doe@gmail.com" required/>
         <br />
         <label for="address">Address: </label>
-        <input type="text" id="address-text" placeholder="House Number" />
+        <input type="text" id="address-text" placeholder="House Number" required/>
       </section>
 
       <!-- Education Section -->
@@ -120,16 +120,16 @@
         <h3>Education</h3>
         <div class="education">
           <label for="degree">Degree: </label>
-          <input type="text" class="degree" />
+          <input type="text" class="degree" required/>
           <br />
           <label for="institute">Institute: </label>
-          <input type="text" class="institute" />
+          <input type="text" class="institute" required/>
           <br />
           <label for="year">Year: </label>
-          <input type="text" class="year" pattern="\d{4}" />
+          <input type="text" class="year" pattern="\d{4}" required/>
           <br />
           <label for="grade">Grade: </label>
-          <input type="text" class="grade" />
+          <input type="text" class="grade" required/>
         </div>
       </section>
 
@@ -140,16 +140,16 @@
         <h3>Experience</h3>
         <div class="experience">
           <label for="company">Company: </label>
-          <input type="text" class="company" placeholder="ABC Corp" />
+          <input type="text" class="company" placeholder="ABC Corp" required/>
           <br />
           <label for="position">Position: </label>
-          <input type="text" class="position" placeholder="Software Engineer" />
+          <input type="text" class="position" placeholder="Software Engineer" required/>
           <br />
           <label for="duration">Duration: </label>
-          <input type="text" class="duration" placeholder="2015-2020" pattern="\d{4}-\d{4}" />
+          <input type="text" class="duration" placeholder="2015-2020" pattern="\d{4}-\d{4}" required/>
           <br />
           <label for="responsibilities">Responsibilities: </label>
-          <input type="text" class="responsibilities" placeholder="Developed software" />
+          <input type="text" class="responsibilities" placeholder="Developed software" required/>
         </div>
       </section>
       <button type="button" class="add-more" id="add-more-experience">Add More Experience</button>
@@ -158,12 +158,12 @@
       <section class="skills">
         <h3>Skills</h3>
         <div id="skills-grid">
-          <input type="text" class="skills-input" />
-          <input type="text" class="skills-input" />
-          <input type="text" class="skills-input" />
-          <input type="text" class="skills-input" />
-          <input type="text" class="skills-input" />
-          <input type="text" class="skills-input" />
+          <input type="text" class="skills-input" required/>
+          <input type="text" class="skills-input" required/>
+          <input type="text" class="skills-input" required/>
+          <input type="text" class="skills-input" required/>
+          <input type="text" class="skills-input" required/>
+          <input type="text" class="skills-input" required/>
           <input type="text" class="skills-input" />
           <input type="text" class="skills-input" />
           <input type="text" class="skills-input" />
