--- a/resume.html
+++ b/resume.html
@@ -120,16 +120,16 @@
         <h3>Education</h3>
         <div class="education">
           <label for="degree">Degree: </label>
-          <input type="text" class="degree" required/>
+          <input type="text" class="degree" placeholder="Masters in Computer Science" required/>
           <br />
           <label for="institute">Institute: </label>
-          <input type="text" class="institute" required/>
+          <input type="text" class="institute" placeholder="Karachi University" required/>
           <br />
           <label for="year">Year: </label>
-          <input type="text" class="year" pattern="\d{4}" required/>
+          <input type="text" class="year" pattern="\d{4}" placeholder="2022" required/>
           <br />
-          <label for="grade">Grade: </label>
-          <input type="text" class="grade" required/>
+          <label for="grade">Grade/CGPA: </label>
+          <input type="text" class="grade" placeholder="2.25 / A" required/>
         </div>
       </section>
 
