--- a/index.html
+++ b/index.html
@@ -55,8 +55,23 @@
     </div>
     <!--Service pros-->
     <!--contact-->
-    <!--Footer-->
+    <div class="contact">
+        <div class="res-image">
+            <img src="/images/cv2.jpg" alt="resume pic">
+        </div>
+        <div class="res-data">
+            <h1>Need customized Resume / CV?</h1>
+            <p>Get a professionally customized resume or CV that highlights your strengths and sets you apart tailored just for you!</p>
+            <button class="contact-btn" onclick="openEmail()">Send a Request</button>
+        </div>
+    </div>
 
+    <!--Footer-->
+    <footer>
+        <p><i class="fa fa-copyright" aria-hidden="true"></i> nimrarasheed  2024</p>
+    </footer>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
