--- a/resume.html
+++ b/resume.html
@@ -179,6 +179,11 @@
   </div>
 </main>
 
+ <!--Footer-->
+ <footer>
+  <p><i class="fa fa-copyright" aria-hidden="true"></i> nimrarasheed  2024</p>
+</footer>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 <script src="resume.js"></script>
 <script src="script.js"></script>
